--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/papaparse": "^5.3.8",
     "papaparse": "^5.4.1",
     "prettier": "^3.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.15.0",
     "sass": "^1.66.1"
   },
